# idempotent

./: CHANGELOG.md  Cargo.toml  README.adoc  README.md  deny.toml  justfile  rustfmt.toml
.github/workflows/: main.yaml
src/: config.rs  entry.rs  error.rs  fencing_token.rs  fingerprint.rs  guard.rs  key.rs  lib.rs  metadata.rs  store.rs
src/store/: claim.rs  memory.rs  valkey.rs
src/store/memory/: actor.rs  command.rs  error.rs
src/store/valkey/: claim.rs  error.rs  wire.rs
src/store/valkey/scripts/: claim.lua  complete.lua  touch.lua
valkey/: claim.lua  complete.lua  remove.lua  touch.lua
