[package]
name = "idempotent"
version = "0.0.0"
edition = "2024"
authors = ["Sede Soukossi"]
description = "Type-safe idempotency keys for building reliable, retry-safe APIs"
license = "MPL-2.0"
repository = "https://github.com/aklanti/idempotent"
rust-version = "1.92.0"
keywords = ["idempotency", "idempotent", "api", "retry", "deduplication"]
categories = ["web-programming", "data-structures"]

[package.metadata.docs.rs]
features = ["full"]

[features]
memory = ["tokio"]
serde = ["dep:serde"]
tracing = ["dep:tracing"]
tokio = ["dep:tokio"]

[dependencies]
async-trait = "0.1"
bytes = { version = "1", features = ["serde"] }
rand = "0.10.0"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
tokio = { version = "1.49.0", optional = true, features = ["sync", "time", "rt-multi-thread", "macros"] }
tracing = { version = "0.1", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
googletest = "0.14"

[lints.clippy]
allow_attributes_without_reason = "warn"
missing_const_for_fn = "warn"
mod_module_files = "warn"
option_if_let_else = "warn"
panic_in_result_fn = "warn"
too_long_first_doc_paragraph = "warn"
unused_self = "deny"
unwrap_used = "deny"

[lints.rust]
missing_docs = "warn"
non_snake_case = "allow"
trivial_numeric_casts = "warn"
unsafe_code = "forbid"
unused-lifetimes = "warn"
unused-macro-rules = "warn"
unused_import_braces = "warn"
unused_must_use = "deny"

[lints.rustdoc]
broken_intra_doc_links = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"
