[package]
name = "idempotent"
version = "0.3.0"
edition = "2024"
authors = ["Sede Soukossi"]
description = "Type-safe idempotency keys for building reliable, retry-safe APIs"
license = "MPL-2.0"
repository = "https://github.com/aklanti/idempotent"
rust-version = "1.96.0"
keywords = ["idempotency", "idempotent", "api", "retry", "deduplication"]
categories = ["web-programming", "data-structures"]

[package.metadata.docs.rs]
features = ["memory", "serde", "tracing", "uuid", "valkey"]

[features]
default = ["uuid"]
memory = ["tokio/time", "tokio/macros"]
serde = ["dep:serde", "bytes/serde", "uuid?/serde"]
tracing = ["dep:tracing"]
uuid = ["dep:uuid"]
valkey = ["dep:redis", "dep:postcard", "serde"]

[dependencies]
bytes = { version = "1", features = ["serde"] }
postcard = { version = "1", optional = true, features = ["alloc"] }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt"] }
tracing = { version = "0.1", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dependencies.redis]
version = "1"
default-features = false
features = ["aio", "connection-manager", "tokio-rustls-comp", "script"]
optional = true 

[dev-dependencies]
googletest = { version = "0.14", features = ["proptest"] }
proptest = "1.11"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["valkey"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints.clippy]
allow_attributes_without_reason = "warn"
expect_used = "deny"
missing_const_for_fn = "warn"
mod_module_files = "warn"
option_if_let_else = "warn"
panic_in_result_fn = "warn"
too_long_first_doc_paragraph = "warn"
unused_self = "deny"
unwrap_used = "deny"

[lints.rust]
missing_docs = "warn"
non_snake_case = "allow"
trivial_numeric_casts = "warn"
unsafe_code = "forbid"
unused-lifetimes = "warn"
unused-macro-rules = "warn"
unused_import_braces = "warn"
unused_must_use = "deny"

[lints.rustdoc]
broken_intra_doc_links = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"
